--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -11,12 +11,12 @@
 
         <mat-form-field class="register-form-field">
             <mat-label>Mobile Number</mat-label>
-            <input matInput type="number" maxlength="10" placeholder="0719876543" required>
+            <input matInput type="number" maxlength="10" placeholder="0719994818" required>
         </mat-form-field>
 
         <mat-form-field class="register-form-field">
             <mat-label>Address / City</mat-label>
-            <input matInput type="number" required>
+            <input matInput placeholder="Ratmalana, Sri Lanka" required>
         </mat-form-field>
 
         <mat-form-field class="register-form-field">
